--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HP of moiruuuu</title>
+    <title>HP</title>
 </head>
 <body>
-    <h1>moiru</h1>
+    <h1>Thank you for visiting my homepage.</h1>
 </body>
 </html>
